--- a/index.html
+++ b/index.html
@@ -7,36 +7,43 @@
   <body>
     <h1>Mohith </h1>
     <p>Student at SVCE</p>
+    <img src="IMG_20190921_091836_034-01" alt="this is an image">
 
-    <h3>MY SUBJECTS</h3>
+    <h3>ABOUT ME</h3>
     <ul>
-      <li>MaThs</li>
-      <li>Physics</li>
-      <li>Chemistry</li>
+      <li><p>I always have the charge of PROTON</p></li>
+      <li><p>I'm lazy but Smart</p></li>
+      <li><p>Stubborn guy  </p></li>
+      <li><p>Values are My Assets</p></li>
     </ul>
+<div class="My Education">
 
-    <ol>
-      <h3>Education</h3>
-      <p>I've completed my school at Venkatagirikota .., </p>
-       <p>and my Intermediate done at Tirupati</p>
-       <p>And I'll get my Engg degree here</p>
-              <hr>
-    </ol>
+      <ol>
+        <h3>Education</h3>
+        <p>I've completed my school at Venkatagirikota .., </p>
+         <p>and my Intermediate done at Tirupati</p>
+         <p>And I'll get my Engg degree here</p>
+                <hr>
+      </ol>
+</div>
+<div class="Career">
 
-    <ol>
-      <h3>Career</h3>
-      <p>I want to be an Engineer</p>
-      <p>Besides Engg .,I am passionate on CIVILS</p>
+      <ol>
+        <h3>Career</h3>
+        <p>I want to be an Engineer</p>
+        <p>Besides Engg .,I am passionate on CIVILS</p>
 
 
-         <hr>
-    </ol>
+           <hr>
+      </ol>
+
+</div>
 
 
     <ol>
       <div class="My Education">
         <h3>My Education</h3>
-        <table cellspacing="55">
+        <table cellspacing="25">
           <tr>
             <td>College</td>
             <td>SVCE</td>
@@ -59,7 +66,7 @@
         <h3>My Hobbies</h3>
       <ul>
         shopping <br>
-        Watching movies <br>
+        Watching movies and Web-series <br>
         Fond Of History
       </ul>
 
@@ -87,10 +94,14 @@
 
 </div>
 
-<form class="contact-form" action="index.html" method="post">
-  <input type="text" name="name" >
-  <input type="text" name="email" >
-  <input type="text" name="Subject">
+<form class="contact-form" action="mailto:mohith.pedduru318@gmail.com" method="post" enctype="text/plain">
+  <label for="">Name:</label>
+  <input type="text" name="name" id="name" placeholder="Enter your name" required><br>
+  E-mail: <input type="text" name="email" name="email"placeholder="Enter your E-mail"required> <br>
+  Subject:<input type="text" name="Subject" placeholder="Enter the subject"required> <br>
+  Message: <br>
+  <textarea name="Message" rows="8" cols="80" placeholder="Enter your message"required></textarea>
+  <input type="submit" name="" value="Send">
 
 </form>
 
