--- a/index.html
+++ b/index.html
@@ -3,79 +3,112 @@
   <head>
     <meta charset="utf-8">
     <title>My Info</title>
-  </head>
+
+           <link rel="stylesheet" href="style.css">
+            <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+<!-- js,-->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+         </head>
+
   <body>
-    <h1>Mohith </h1>
-    <p>Student at SVCE</p>
-    <img src="IMG_20190921_091836_034-01" alt="this is an image">
 
-    <h3>ABOUT ME</h3>
-    <ul>
-      <li><p>I always have the charge of PROTON</p></li>
-      <li><p>I'm lazy but Smart</p></li>
-      <li><p>Stubborn guy  </p></li>
-      <li><p>Values are My Assets</p></li>
-    </ul>
-<div class="My Education">
-
-      <ol>
-        <h3>Education</h3>
-        <p>I've completed my school at Venkatagirikota .., </p>
-         <p>and my Intermediate done at Tirupati</p>
-         <p>And I'll get my Engg degree here</p>
-                <hr>
-      </ol>
-</div>
-<div class="Career">
-
-      <ol>
-        <h3>Career</h3>
-        <p>I want to be an Engineer</p>
-        <p>Besides Engg .,I am passionate on CIVILS</p>
+    <nav class="navbar navbar-expand-lg navbar-danger bg-light">
+  <a class="navbar-brand" href="#">Mohith P Srinivas</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbar">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Projects</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="contact.html">Contact</a>
+      </li>
+      </ul>
+  </div>
+</nav>
 
 
-           <hr>
-      </ol>
-
-</div>
-
-
-    <ol>
-      <div class="My Education">
-        <h3>My Education</h3>
-        <table cellspacing="25">
-          <tr>
-            <td>College</td>
-            <td>SVCE</td>
-          </tr>
-          <tr>
-            <td>Schooling</td>
-            <td>Indus Valley </td>
-          </tr>
+  <div id="main">
+          <img src="mohu321.jpeg" alt="this is an image" id="picture">
+        <h1>  Mohith P Srinivas </h1>
+        <hr style="width: 30%;text-align: center; margin-right: 25;size:25">
+    <p>Student at <a href="https:svcengg.com" target="_blank">SVCE</a></p>
 
 
-        </table>
+  </div>
 
-      </div>
+<div id="Aboutme">
 
-
-    </ol>
-    <hr>
-    <ol>
-      <div class="My Hobbies">
-        <h3>My Hobbies</h3>
+      <h2>ABOUT ME</h2>
       <ul>
-        shopping <br>
-        Watching movies and Web-series <br>
-        Fond Of History
+        <li><p>I always have the charge of PROTON</p></li>
+        <li><p>I'm lazy but Smart</p></li>
+        <li><p>Stubborn guy  </p></li>
+        <li><p>Values are My Assets</p></li>
       </ul>
 
-      </div>
+</div>
 
-    </ol>
-  <hr>
-<div class="contact">
-  <h3>Contact me</h3>
+
+<div id="myCareer">
+        <h2> My Career</h2>
+        <p>I want to be an Engineer</p>
+        <p>Besides Engg .,I am passionate on CIVILS</p>
+</div>
+<div id="hobbies">
+  <h2>My Hobbies</h2>
+  <p>Watching Movies And Web-series</p>
+  <p>Fond of History and Science</p>
+  <p>Shopping</p>
+</div>
+
+
+<div id="projects">
+  <h2>My projects</h2>
+  <h3>Saath udna</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <h3>S.P.Y</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <h3>Agent-113</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+</div>
+<div id="education">
+  <h2>My Education</h2>
+  <table cellspacing="25" >
+
+    <tr>
+      <td>College</td>
+      <td>SVCE</td>
+    </tr>
+    <tr>
+      <td>Schooling</td>
+      <td>Indus Valley , Infant Jesus</td>
+    </tr>
+    <tr>
+      <td>Intermediate</td>
+      <td>Gayatri Jr.College</td>
+    </tr>
+  </table>
+</div>
+
+<div id="contact">
+  <h2>Contact me</h2>
   <table cellspacing="35">
     <tr>
       <td>Phone</td>
@@ -94,16 +127,20 @@
 
 </div>
 
-<form class="contact-form" action="mailto:mohith.pedduru318@gmail.com" method="post" enctype="text/plain">
-  <label for="">Name:</label>
-  <input type="text" name="name" id="name" placeholder="Enter your name" required><br>
-  E-mail: <input type="text" name="email" name="email"placeholder="Enter your E-mail"required> <br>
-  Subject:<input type="text" name="Subject" placeholder="Enter the subject"required> <br>
-  Message: <br>
-  <textarea name="Message" rows="8" cols="80" placeholder="Enter your message"required></textarea>
-  <input type="submit" name="" value="Send">
+<div id="details">
 
-</form>
+  <form class="contact-form" action="mailto:mohith.pedduru318@gmail.com" method="post" enctype="text/plain">
+    <label for="">Name:</label>
+    <input type="text" name="name" id="name" placeholder="Enter your name" required><br>
+    E-mail: <input type="text" name="email" name="email"placeholder="Enter your E-mail"required> <br>
+    Subject:<input type="text" name="Subject" placeholder="Enter the subject"required> <br>
+    Message: <br>
+    <textarea name="Message" rows="8" cols="80" placeholder="Enter your message"required></textarea>
+    <input type="submit" name="" value="Send">
+
+  </form>
+
+</div>
 
 
   </body>
